--- a/packages/rettangoli-ui/package.json
+++ b/packages/rettangoli-ui/package.json
@@ -9,7 +9,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/yuusoft-org/rettangoli"
+    "url": "git+https://github.com/yuusoft-org/rettangoli.git"
   },
   "author": {
     "name": "Luciano Wu",
