--- a/packages/rettangoli-ui/package.json
+++ b/packages/rettangoli-ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.7",
   "description": "A UI component library for building web interfaces.",
   "main": "dist/rettangoli-ui.min.js",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -16,11 +17,13 @@
   },
   "license": "MIT",
   "scripts": {
+    "dev": "npx @11ty/eleventy --serve --port 3000",
     "build": "node esbuild.js"
   },
   "devDependencies": {
     "esbuild": "^0.20.0",
-    "esbuild-plugin-http": "^0.2.0"
+    "esbuild-plugin-http": "^0.2.0",
+    "playwright": "^1.46.0"
   },
   "keywords": [
     "ui",
@@ -31,5 +34,9 @@
   "bugs": {
     "url": "https://github.com/yuusoft-org/rettangoli/issues"
   },
-  "homepage": "https://github.com/yuusoft-org/rettangoli#readme"
+  "homepage": "https://github.com/yuusoft-org/rettangoli#readme",
+  "dependencies": {
+    "pixelmatch": "^6.0.0",
+    "pngjs": "^7.0.0"
+  }
 }
