--- a/packages/rettangoli-ui/package.json
+++ b/packages/rettangoli-ui/package.json
@@ -17,7 +17,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "dev": "npx @11ty/eleventy --serve --port 3000",
+    "dev": "npx @11ty/eleventy@3.0.0-beta.1 --serve --port 3000",
     "build": "node esbuild.js"
   },
   "devDependencies": {
