--- a/packages/rettangoli-ui/package.json
+++ b/packages/rettangoli-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rettangoli-ui",
-  "version": "0.0.8",
+  "version": "0.0.8-rc1",
   "description": "A UI component library for building web interfaces.",
   "main": "dist/rettangoli-ui.min.js",
   "type": "module",
