--- a/apps/rettangoli.dev/pages/_data/landing.yaml
+++ b/apps/rettangoli.dev/pages/_data/landing.yaml
@@ -1,7 +1,7 @@
 
 hero:
-  title: Rettangoli
-  subtitle: A layout and UI library that you can learn within one day and use for the rest of your life
+  title: Rettangoli UI
+  subtitle: Learn within one day and use until the end of the internet
 
 features:
   - title: Intuitive and small API
