--- a/apps/rettangoli.dev/pages/_data/landing.yaml
+++ b/apps/rettangoli.dev/pages/_data/landing.yaml
@@ -1,7 +1,7 @@
 
 hero:
   title: Rettangoli UI
-  subtitle: Learn within one day and use until the end of the internet
+  subtitle: Learn within one day and use until the end of the web
 
 features:
   - title: Intuitive and small API
