--- a/packages/rettangoli-ui/package.json
+++ b/packages/rettangoli-ui/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "npx @11ty/eleventy@3.0.0-beta.1 --serve --port 3000",
-    "build": "node esbuild.js"
+    "build": "node esbuild.js ui"
   },
   "devDependencies": {
     "esbuild": "^0.20.0",
