--- a/.github/workflows/release-site.yaml
+++ b/.github/workflows/release-site.yaml
@@ -28,26 +28,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v3
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
 
-      # Install dependencies
       - name: Install Dependencies
+        working-directory: ./apps/rettangoli.dev
         run: npm ci
 
       - name: Build
+        working-directory: ./apps/rettangoli.dev
         run: npm run build
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: dist
-          path: _site/
+          path: ./apps/rettangoli.dev/_site/
 
-  # Single deploy job since we're just deploying
   deploy:
     needs: build
     environment:
@@ -67,7 +66,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
           path: './_site'
       - name: Deploy to GitHub Pages
         id: deployment
