--- a/apps/rettangoli.dev/pages/_data/docs.yaml
+++ b/apps/rettangoli.dev/pages/_data/docs.yaml
@@ -27,3 +27,21 @@
     - rtgl-text-ellipsis
     - rtgl-text-margin
     - rtgl-text-cursor
+- item: rtgl-image
+  items:
+    - rtgl-image-dimensions
+    - rtgl-image-border
+    - rtgl-image-object-fit
+- item: rtgl-svg
+  items:
+    - rtgl-svg-dimensions
+    - rtgl-svg-color
+    - rtgl-svg-fill
+    - rtgl-svg-stroke
+    - rtgl-svg-stroke-width
+- item: rtgl-button
+  items:
+    - rtgl-button-type
+    - rtgl-button-dimensions
+    - rtgl-button-link
+    - rtgl-button-margin
