--- a/packages/rettangoli-ui/package.json
+++ b/packages/rettangoli-ui/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rettangoli-ui",
-  "version": "0.0.10-rc2",
+  "version": "0.0.10-rc3",
   "description": "A UI component library for building web interfaces.",
-  "main": "entry-esm.js",
+  "main": "dist/rettangoli-esm.min.js",
   "type": "module",
   "files": [
     "dist"
