--- a/packages/rettangoli-primitives-web/package.json
+++ b/packages/rettangoli-primitives-web/package.json
@@ -6,6 +6,7 @@
     "js-yaml": "^4.1.0",
     "liquidjs": "^10.21.0",
     "pixelmatch": "^7.1.0",
-    "playwright": "^1.52.0"
+    "playwright": "^1.52.0",
+    "shiki": "^3.3.0"
   }
 }
