--- a/packages/rettangoli-primitives-web/package.json
+++ b/packages/rettangoli-primitives-web/package.json
@@ -1,12 +1,39 @@
 {
+  "name": "rettangoli-ui",
+  "version": "0.1.0",
+  "description": "A UI component library for building web interfaces.",
+  "main": "dist/rettangoli-esm.min.js",
   "type": "module",
-  "dependencies": {
-    "esbuild": "^0.25.3",
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yuusoft-org/rettangoli.git"
+  },
+  "author": {
+    "name": "Luciano Hanyon Wu",
+    "email": "han4wluc@yuusoft.com"
+  },
+  "license": "MIT",
+  "scripts": {
+    "build": "node esbuild.js"
+  },
+  "devDependencies": {
+    "esbuild": "^0.20.0",
     "esbuild-plugin-http": "^0.2.0",
-    "js-yaml": "^4.1.0",
-    "liquidjs": "^10.21.0",
-    "pixelmatch": "^7.1.0",
-    "playwright": "^1.52.0",
-    "shiki": "^3.3.0"
-  }
+    "playwright": "^1.46.0",
+    "pixelmatch": "^6.0.0",
+    "pngjs": "^7.0.0"
+  },
+  "keywords": [
+    "ui",
+    "library",
+    "web",
+    "components"
+  ],
+  "bugs": {
+    "url": "https://github.com/yuusoft-org/rettangoli/issues"
+  },
+  "homepage": "https://github.com/yuusoft-org/rettangoli#readme"
 }
