--- a/packages/rettangoli-ui/package.json
+++ b/packages/rettangoli-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rettangoli-ui",
-  "version": "0.1.0",
+  "version": "0.1.0-rc1",
   "description": "A UI component library for building web interfaces.",
   "main": "dist/rettangoli-esm.min.js",
   "type": "module",
@@ -21,7 +21,6 @@
   },
   "devDependencies": {
     "esbuild": "^0.20.0",
-    "esbuild-plugin-http": "^0.2.0",
     "playwright": "^1.46.0",
     "pixelmatch": "^6.0.0",
     "pngjs": "^7.0.0"
