fix ci for npm publish

--- a/.github/workflows/release-package.yaml
+++ b/.github/workflows/release-package.yaml
@@ -25,6 +25,12 @@ jobs:
       - name: Build
         run: bun run build
 
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
+
       # Publish to npm
       - name: Publish to npm
         run: npm publish
