--- a/.github/workflows/release-package.yaml
+++ b/.github/workflows/release-package.yaml
@@ -1,8 +1,9 @@
 name: Publish package rettangoli-ui to npm
-
 on:
   release:
     types: [published]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   build:
@@ -24,6 +25,12 @@ jobs:
 
       - name: Build
         run: bun run build
+
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
 
       # Publish to npm
       - name: Publish to npm
