--- a/.github/workflows/release-site.yaml
+++ b/.github/workflows/release-site.yaml
@@ -2,13 +2,13 @@
 name: Deploy static content to Pages
 
 # Temporarily disabled workflow
-# on:
-#   # Runs on pushes targeting the default branch
-#   push:
-#     branches: ["main"]
-#
-#   # Allows you to run this workflow manually from the Actions tab
-#   workflow_dispatch:
+on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -29,18 +29,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v3
+      # Setup Bun
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: '20.x'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Install Dependencies
-        working-directory: ./apps/rettangoli.dev
-        run: npm ci
+          bun-version: 1.2.2
 
       - name: Build
         working-directory: ./apps/rettangoli.dev
-        run: npm run build
+        run: bunx sitic@0.1.0-rc2 build
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
