implement navbar with rettangoli-fe

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
 /packages/rettangoli-ui/dist
 /packages/rettangoli-ui/node_modules
+/packages/rettangoli-ui/viz/static/public/main.js.map
+/packages/rettangoli-ui/viz/static/public/main.js
 /packages/rettangoli-fe/dist
 /packages/rettangoli-fe/node_modules
 /packages/rettangoli-fe/.temp
