Implement form component with enhanced state management and event handling
- Introduced new form handlers and store for improved state management.
- Added YAML schema for form view data and props.
- Updated form example to utilize new event handling structure.
- Refactored input component to support dynamic styling and event dispatching.
- Removed legacy error handling example from form specs.

--- a/packages/rettangoli-ui/src/components2/popover/popover.view.yaml
+++ b/packages/rettangoli-ui/src/components2/popover/popover.view.yaml
@@ -21,6 +21,8 @@ propsSchema:
     placement:
       type: string
       default: bottom
+    isOpen:
+      type: boolean
 
 refs:
   popoverOverlay:
@@ -46,7 +48,7 @@ styles:
       opacity: 1
       transform: scale(1)
 
-  .popoverContainer:
+  '#popoverContainer':
     animation: popover-in 150ms cubic-bezier(0.16, 1, 0.3, 1)
     transform-origin: top
 
