--- a/.github/workflows/release-site.yaml
+++ b/.github/workflows/release-site.yaml
@@ -34,9 +34,13 @@ jobs:
         with:
           bun-version: 1.2.2
 
+      # Install dependencies from root
+      - name: Install Dependencies
+        run: bun install --frozen-lockfile
+
       - name: Build
         working-directory: ./apps/rettangoli.dev
-        run: bunx sitic@0.1.0-rc2 build
+        run: bun run ../../packages/rettangoli-sites/src/cli.js build
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
