--- a/packages/rettangoli-fe/package.json
+++ b/packages/rettangoli-fe/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "js-yaml": "^4.1.0",
-    "esbuild": "^0.25.4"
+    "esbuild": "^0.25.4",
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "immer": "^10.1.1",
