--- a/packages/rettangoli-cli/package.json
+++ b/packages/rettangoli-cli/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "commander": "^14.0.0",
-    "rettangoli-fe": "workspace:*"
+    "rettangoli-fe": "workspace:*",
+    "rettangoli-sites": "workspace:*",
+    "rettangoli-vt": "workspace:*"
   }
 }
