implement dialog component

--- a/packages/rettangoli-ui/viz/config.yaml
+++ b/packages/rettangoli-ui/viz/config.yaml
@@ -26,3 +26,5 @@ sections:
     files: "viz/specs/navbar"
   - title: "Form"
     files: "viz/specs/form"
+  - title: "Dialog"
+    files: "viz/specs/dialog"
