--- a/packages/rettangoli-fe/example/pages/todos/todos.view.yaml
+++ b/packages/rettangoli-fe/example/pages/todos/todos.view.yaml
@@ -25,6 +25,10 @@ refs:
     eventListeners:
       click:
         handler: handleClearCompletedClick
+  completed-todo-svg:
+    eventListeners:
+      click:
+        handler: handleTodoClick
   todo-*:
     eventListeners:
       click:
@@ -38,29 +42,83 @@ refs:
       click:
         handler: handleFilterClick
 
-styles: {}
+styles:
+  '#root':
+    background-color: grey 
 
+  '#app':
+    background-color: black
+    display: flex
+    flex-direction: column
+    margin: auto
+    border-radius: 12px
+    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.08)
+
+  '#header':
+    position: sticky
+    top: 0
+    z-index: 10
+
+  '#todo-input':
+    padding: 16px
+    font-size: 24px
+    border: 1px solid #ededed
+    outline: none
+    border-radius: 6px
+  '#todo-list':
+    margin: 0
+    padding: 0
+
+  '#todo':
+    border-bottom: 1px solid #ededed
+
+  '#footer':
+    display: flex
+    justify-content: space-between
+    padding: 16px
+    font-size: 16px
+
+  'rtgl-button[v=pr]':
+    border: 1px solid #b83f45
+    color: #b83f45
+    background: #fff
+    border-radius: 6px
+
+  'rtgl-button[v=lk]':
+    border: none
+    color: #777
+    background: none
+
+  '#clear-completed':
+    border: none
+    background: none
+    color: #777
+    cursor: pointer
+    
 template:
-  - rtgl-view#root h=100vh w=100vw d=v ah=c av=c bgc=#f5f5f5:
-      - rtgl-view#app w=550 ah=c bgc=white:
-        - rtgl-view#header ph=lg pv=xl bwb=1 bgc=white:
+  - rtgl-view#root w=100vw d=v ah=c av=c bgc=#f5f5f5:
+      - rtgl-view#app w=550 h=100vh ah=c bgc=white:
+        - rtgl-view#header ah=c ph=lg pv=xl bwb=1 bgc=white:
           - rtgl-text s=h1 ta=c c=rgba(175,47,47,0.15) mb=0: "${title}"
           - rtgl-view d=h ai=c:
-            - rtgl-button#toggle-all mr=sm:
+            - rtgl-svg#toggle-all mr=sm svg=tick c=fg wh=64:
             - input#todo-input ph=xl fs=24px fw=200 w=100% border=none outline=none placeholder="${placeholderText}":
 
         - rtgl-view#main ah=c:
           - rtgl-view#todo-list:
               - $map: { $eval: filteredTodos }
                 each(todo):
-                  - rtgl-view d=r ai=c pv=md ph=lg bwb=1:
-                    - rtgl-button#todo-${todo.id}:
-                    - $if: todo.completed
-                      then:
-                        - rtgl-text c=#d9d9d9 ml=md: "${todo.title}"
-                      else:
-                        - rtgl-text ml=md: "${todo.title}"
-                    - rtgl-button#delete-${todo.id}: "×"
+                  - rtgl-view#todo w=400 g=xl d=h av=c ai=c pv=md ph=lg bwb=xs:
+                    - rtgl-view flex=1 d=h:
+                      - $if: todo.completed
+                        then:
+                          - rtgl-svg#todo-${todo.id} svg=tick c=fg wh=16:
+                          - rtgl-text c=su-fg ml=md: 
+                            - del: "${todo.title}"
+                        else:
+                          - rtgl-view#todo-${todo.id} bgc=fg w=16 h=16:
+                          - rtgl-text c=er-fg ml=md: "${todo.title}"
+                    - rtgl-svg#delete-${todo.id} svg=cross c=fg wh=16:
 
         - rtgl-view#footer d=h jc=space-between p=md c=#777 fs=14px:
           - rtgl-text: "${activeCount} ${itemText} left"
@@ -79,6 +137,4 @@ template:
               - rtgl-button#filter-completed v=pr: "Completed"
             else:
               - rtgl-button#filter-completed v=lk: "Completed"
-          - $if: showClearCompleted
-            then:
-              - rtgl-button#clear-completed v=lk: "Clear completed (${completedCount})"
+          - rtgl-button#clear-completed v=lk: "Clear completed (${completedCount})"
