--- a/packages/rettangoli-ui/src/components/navbar/navbar.view.yaml
+++ b/packages/rettangoli-ui/src/components/navbar/navbar.view.yaml
@@ -54,24 +54,21 @@ events:
 anchors:
   - &image
     - rtgl-text s=lg: "${start.label}"
-    - $switch:
-        '"image" in start':
-          - rtgl-image w=${start.image.width} h=${start.image.height} src=${start.image.src} alt=${start.image.alt}:
+    - $if start.image && start.image.src:
+        - rtgl-image w=${start.image.width} h=${start.image.height} src=${start.image.src} alt=${start.image.alt}:
 
 template:
   - rtgl-view bgc=bg d=h h=48 av=c w=f ${containerAttrString}:
-    - $switch:
-        '"href" in start':
-          - a href=${start.href}:
-            - rtgl-view d=h av=c g=lg g=md:
-              - *image
-        '"path" in start':
-          - rtgl-view#start d=h av=c g=lg g=md cur=p:
-            - *image
-        $default:
+    - $if start.href:
+        - a href=${start.href}:
           - rtgl-view d=h av=c g=lg g=md:
             - *image
-
+      elif start.path:
+        - rtgl-view#start d=h av=c g=lg g=md cur=p:
+          - *image
+      else:
+        - rtgl-view d=h av=c g=lg g=md:
+          - *image
     - rtgl-view flex=1:
     - rtgl-view d=h av=c g=lg:
       - slot name=right:
