--- a/packages/rettangoli-ui/src/components/pageOutline/pageOutline.view.yaml
+++ b/packages/rettangoli-ui/src/components/pageOutline/pageOutline.view.yaml
@@ -29,7 +29,6 @@ events:
 template:
   - rtgl-view h=f w=272:
     - rtgl-view w=f g=sm mt=xl:
-      - $map: { $eval: items }
-        each(v,i):
-          - rtgl-view pv=xs av=c href=${v.href}:
-            - rtgl-text s=sm c=${v.c} h-c=fg: ${v.title}
+      - $for item, i in items:
+        - rtgl-view pv=xs av=c href=${item.href}:
+          - rtgl-text s=sm c=${item.c} h-c=fg: ${item.title}
