fix package.json type module

--- a/packages/rettangoli-vt/package.json
+++ b/packages/rettangoli-vt/package.json
@@ -2,6 +2,7 @@
   "name": "rettangoli-vt",
   "version": "0.0.1",
   "description": "Rettangoli Visual Testing",
+  "type": "module",
   "main": "./src/index.js",
   "exports": {
     ".": "./src/index.js",
