--- a/.github/workflows/publish-fe.yaml
+++ b/.github/workflows/publish-fe.yaml
@@ -2,12 +2,12 @@ name: Publish package to npm
 on:
   push:
     tags:
-      - 'cli-v*'
+      - 'fe-v*'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  publish-cli:
+  publish-ui:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -30,6 +30,6 @@ jobs:
       # Publish to npm
       - name: Publish to npm
         run: npm publish
-        working-directory: ./packages/rettangoli-cli
+        working-directory: ./packages/rettangoli-fe
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
